[gd_scene load_steps=20 format=3 uid="uid://bqldewmvd7lha"]

[ext_resource type="Script" path="res://Boss.gd" id="1_83ylm"]
[ext_resource type="Texture2D" uid="uid://dta1ncmeobpjo" path="res://YOD.png" id="2_f58py"]
[ext_resource type="PackedScene" uid="uid://cq8bgmoeh7410" path="res://gun.tscn" id="4_clv88"]
[ext_resource type="Texture2D" uid="uid://3tqmxna101rc" path="res://Mic.png" id="5_o1pf5"]
[ext_resource type="PackedScene" uid="uid://dg17o6xksh21u" path="res://BloodParticles.tscn" id="6_1eh5m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3i6sd"]
atlas = ExtResource("2_f58py")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_17m0v"]
atlas = ExtResource("2_f58py")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkggh"]
atlas = ExtResource("2_f58py")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vup0b"]
atlas = ExtResource("2_f58py")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrngx"]
atlas = ExtResource("2_f58py")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2d6a"]
atlas = ExtResource("2_f58py")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4o0w"]
atlas = ExtResource("2_f58py")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwnxg"]
atlas = ExtResource("2_f58py")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n25b3"]
atlas = ExtResource("2_f58py")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_x3vls"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i6sd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17m0v")
}],
"loop": true,
"name": &"(F) Ducking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkggh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vup0b")
}],
"loop": true,
"name": &"(F) One Arm Up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrngx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2d6a")
}],
"loop": true,
"name": &"(F) Talking",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4o0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrngx")
}],
"loop": true,
"name": &"(F) Two Arms Up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwnxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n25b3")
}],
"loop": true,
"name": &"(NF) Talking",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dtqxw"]
size = Vector2(125, 112)

[sub_resource type="Animation" id="Animation_qjymq"]
resource_name = "Mic Spin"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"(F) One Arm Up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GunNode:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GunNode/Gun:isAttacking")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6cm4y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"(F) One Arm Up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GunNode:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cwktg"]
_data = {
"Mic Spin": SubResource("Animation_qjymq"),
"RESET": SubResource("Animation_6cm4y")
}

[node name="Boss" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(1.98, 1.98)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_83ylm")
max_health = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-1.49999, 88)
scale = Vector2(1.92188, 2.03125)
sprite_frames = SubResource("SpriteFrames_x3vls")
animation = &"(F) One Arm Up"
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"source": "res://Assets/YOD.ase"
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 97)
shape = SubResource("RectangleShape2D_dtqxw")

[node name="BloodParticles" parent="." instance=ExtResource("6_1eh5m")]
color = Color(0.270588, 0.529412, 0.54902, 0.721569)

[node name="MoveTimer" type="Timer" parent="."]

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cwktg")
}
speed_scale = 5.0

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-1, 4)

[node name="GunNode" type="Node2D" parent="."]
position = Vector2(23, 67)

[node name="Gun" parent="GunNode" instance=ExtResource("4_clv88")]
unique_name_in_owner = true
position = Vector2(33, 0)

[node name="Sprite2D" type="Sprite2D" parent="GunNode"]
position = Vector2(-0.347137, 0.25)
scale = Vector2(2.70313, 2.70313)
texture = ExtResource("5_o1pf5")
offset = Vector2(6.75143, -0.611478)

[node name="DeathAnimTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
